@@ -1,0 +1,3 @@
+cmake_minimum_required(VERSION 3.7)
+
+include("${CMAKE_CURRENT_LIST_DIR}/TryxPSTargets.cmake")
